@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.datacrow</groupId>
         <artifactId>datacrow-main</artifactId>
-		<version>4.9.0</version>
+		<version>4.10.0</version>
     </parent>
 
     <artifactId>datacrow-plugins</artifactId>
