@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.datacrow</groupId>
         <artifactId>datacrow-main</artifactId>
-        <version>4.9.0</version>
+        <version>4.10.0</version>
     </parent>
 
     <artifactId>datacrow-services</artifactId>
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>org.datacrow</groupId>
             <artifactId>datacrow-core</artifactId>
-            <version>4.9.0</version>
+            <version>4.10.0</version>
         </dependency>
     </dependencies>
 
