@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.datacrow</groupId>
         <artifactId>datacrow-main</artifactId>
-        <version>4.9.0</version>
+        <version>4.10.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
