@@ -1,4 +1,14 @@
 -----------------------------------------------------------------------------------------
+Data Crow version 4.10.0                                           Released on 2023-xx-xx
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+- Issue with self referencing items; right-click menu not showing in view for referenced 
+  item.
+- Fixed an issue where quick search is not working when the item holds a reference to 
+  an item of module with having the first numeric field set as descriptive.
+
+-----------------------------------------------------------------------------------------
 Data Crow version 4.9.0                                            Released on 2023-05-09
 -----------------------------------------------------------------------------------------
 Version 4.9 brings you a whole new module to register Comic Books. It is supported by
